--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -39,13 +39,14 @@
       },
       "outputs": [],
       "source": [
-        "# Question 1.1"
+        "# Question 1.1 What is the difference between regression and classification?"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.2"
+        "# Question 1.2 What is a confusion table? What does it help us understand about\n",
+        "# a model's performance?"
       ],
       "metadata": {
         "id": "E-yLJRFutfi1"
@@ -57,7 +58,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.3"
+        "# Question 1.3 What does the SSE quantify about a particular model?"
       ],
       "metadata": {
         "id": "bL_rpvf-tfzO"
@@ -69,7 +70,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.4"
+        "# Question 1.4 What are overfitting and underfitting?"
       ],
       "metadata": {
         "id": "uLyPqsddtgAx"
@@ -81,7 +82,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.5"
+        "# Question 1.5 Why does splitting the data into training and testing sets,\n",
+        "# and choosing  𝑘  by evaluating accuracy or SSE on the test set, improve model performance?"
       ],
       "metadata": {
         "id": "E1NCLp-ltgRr"
@@ -93,7 +95,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.6"
+        "# Question 1.6 With classification, we can report a class label as a prediction\n",
+        "# or a probability distribution over class labels. Please explain the strengths\n",
+        "# and weaknesses of each approach."
       ],
       "metadata": {
         "id": "XEGAb1t_tggP"
@@ -217,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "b362aa0d",
       "metadata": {
         "id": "b362aa0d"
