--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -39,7 +39,11 @@
       },
       "outputs": [],
       "source": [
-        "# Question 1.1 What is the difference between regression and classification?"
+        "# Question 1.1 What is the difference between regression and classification?\n",
+        "\n",
+        "# These are both types of predictors. The difference is in what exactly they predict.\n",
+        "# Regression is when we use algorithms and models to predict numeric outcomes.\n",
+        "# Classification is when we use the same methods to predict categorical outcomes."
       ]
     },
     {
