--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -50,7 +50,14 @@
       "cell_type": "code",
       "source": [
         "# Question 1.2 What is a confusion table? What does it help us understand about\n",
-        "# a model's performance?"
+        "# a model's performance?\n",
+        "\n",
+        "# A confusion table is a way to test the fit of a predictive model on the actual\n",
+        "# data set for categorical data sets. It's a cross-tabulation of preducted values\n",
+        "# with actual values and it helps us understand how well a predictive model \"fits\"\n",
+        "# the actual data we give it. It looks for patterns in the predicted result and\n",
+        "# actual results, allowing us to record and analyze trends. \"Accuracy\" is how we\n",
+        "# quantify how \"correct\" the predictive model is."
       ],
       "metadata": {
         "id": "E-yLJRFutfi1"
@@ -62,7 +69,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.3 What does the SSE quantify about a particular model?"
+        "# Question 1.3 What does the SSE quantify about a particular model?\n",
+        "\n",
+        "# The SSE (sum of squared errors) quantifies a model's accuracy. In other words,\n",
+        "# it quantifies how well a model's predicted values fall from the true values it's\n",
+        "# being used to predict."
       ],
       "metadata": {
         "id": "bL_rpvf-tfzO"
@@ -74,7 +85,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 1.4 What are overfitting and underfitting?"
+        "# Question 1.4 What are overfitting and underfitting?\n",
+        "\n"
       ],
       "metadata": {
         "id": "uLyPqsddtgAx"
