--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -86,7 +86,15 @@
       "cell_type": "code",
       "source": [
         "# Question 1.4 What are overfitting and underfitting?\n",
-        "\n"
+        "\n",
+        "# Essentially, overfitting and underfitting are ways to look at a models sensitivity\n",
+        "# to noise and generalization -- whether they're overly exacting or overly simplistic.\n",
+        "# \"Overfitting\" is when a model examines a test data set and adapts to it's data\n",
+        "# points and characteristics to well, meaning that it has low error with the training\n",
+        "# data set but high error with a real data set. \"Underfitting\" is when your model is too\n",
+        "# simple and general and pays too little attention to the characteristic and traits of the\n",
+        "# training data (meaning it has high error for the training AND real data sets it\n",
+        "# processes)."
       ],
       "metadata": {
         "id": "uLyPqsddtgAx"
