--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -72,8 +72,8 @@
         "# Question 1.3 What does the SSE quantify about a particular model?\n",
         "\n",
         "# The SSE (sum of squared errors) quantifies a model's accuracy. In other words,\n",
-        "# it quantifies how well a model's predicted values fall from the true values it's\n",
-        "# being used to predict."
+        "# it quantifies how closely a model's predicted values fall from the true values\n",
+        "# it's being used to predict."
       ],
       "metadata": {
         "id": "bL_rpvf-tfzO"
@@ -94,7 +94,7 @@
         "# data set but high error with a real data set. \"Underfitting\" is when your model is too\n",
         "# simple and general and pays too little attention to the characteristic and traits of the\n",
         "# training data (meaning it has high error for the training AND real data sets it\n",
-        "# processes)."
+        "# processes). If K is very small, it will lead to overfitting. It is very large, underfitting."
       ],
       "metadata": {
         "id": "uLyPqsddtgAx"
@@ -107,7 +107,18 @@
       "cell_type": "code",
       "source": [
         "# Question 1.5 Why does splitting the data into training and testing sets,\n",
-        "# and choosing  𝑘  by evaluating accuracy or SSE on the test set, improve model performance?"
+        "# and choosing  𝑘  by evaluating accuracy or SSE on the test set, improve model performance?\n",
+        "\n",
+        "# This method improves model performance because it enables us to see how the model\n",
+        "# adapts to the \"test set\" (a set the model hasn't seen) to ensure that overfitting\n",
+        "# or underfitting hasn't occured. By choosing k by evaluating accuracy/SSE on the test set,\n",
+        "# we can make sure that the K doesn't let to overfitting by being overly reliant on the\n",
+        "# training data. This way, we strike a balance between accuracy and applicability.\n",
+        "# The k is somewhere in the middle, meaning it will use the training data to yield a k\n",
+        "# that we can then use to extract meaningful and trustworthy predictions when used\n",
+        "# on later test sets. Were we to choose K by accuracy/SSE on the training set,\n",
+        "# we would get a model that overfits and is too sensitive to the noise of the\n",
+        "# training set (since the model's only reference is the training set)."
       ],
       "metadata": {
         "id": "E1NCLp-ltgRr"
@@ -121,7 +132,25 @@
       "source": [
         "# Question 1.6 With classification, we can report a class label as a prediction\n",
         "# or a probability distribution over class labels. Please explain the strengths\n",
-        "# and weaknesses of each approach."
+        "# and weaknesses of each approach.\n",
+        "\n",
+        "# Class labels as predictions -\n",
+        "# The benefit to reporting class labels as predictions is that it enables us to examine\n",
+        "# the relative likelihood of one class label to the others. In other words, we can\n",
+        "# make a singular prediction that X class label is the most likely label to occur.\n",
+        "# The downside is that this doesn't give us a comprehensive overview each class label's\n",
+        "# relative likelihood. For instance, X may be the MOST likely class, but perhaps Y\n",
+        "# and Z are also both pretty likely to happen, making a class label as prediction\n",
+        "# approach somewhat limiting in understanding the liklihood of all the possible outcomes.\n",
+        "\n",
+        "\n",
+        "# Probability distribution over class labels -\n",
+        "# Similarly, a probibility distribution over class labels approach gives us a broader view\n",
+        "# into all the different class labels' relative liklihood. However, this method lacks\n",
+        "# the specialized insight into a singular class label's liklihood, as well as being\n",
+        "# overly-sensitive to skewed data. Let's say that there were 10 concentrated entries for X\n",
+        "# and Y was an outlier. This method might give Y unfairly increased representation.\n",
+        "\n"
       ],
       "metadata": {
         "id": "XEGAb1t_tggP"
