--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -548,26 +548,85 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 2.2"
+        "# Question 2.2\n",
+        "\n",
+        "cars_test[\"year_norm\"] = (cars_test[\"year\"] - cars_test[\"year\"].min()) / (cars_test[\"year\"].max() - cars_test[\"year\"].min())\n",
+        "cars_test[\"mileage_norm\"] = (cars_test[\"mileage\"] - cars_test[\"mileage\"].min()) / (cars_test[\"mileage\"].max() - cars_test[\"mileage\"].min())\n",
+        "\n",
+        "print(cars_test[[\"year\", \"year_norm\", \"mileage\", \"mileage_norm\"]].head())\n"
       ],
       "metadata": {
-        "id": "ydx0rxXyt1Ol"
+        "id": "ydx0rxXyt1Ol",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5badee85-d670-46cd-83fa-ed1752a079ee"
       },
       "id": "ydx0rxXyt1Ol",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   year  year_norm  mileage  mileage_norm\n",
+            "0  2008   0.744681   274117      0.269287\n",
+            "1  2011   0.808511   190552      0.187194\n",
+            "2  2018   0.957447    39590      0.038892\n",
+            "3  2014   0.872340    64146      0.063016\n",
+            "4  2018   0.957447     6654      0.006537\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1865604891.py:3: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  cars_test[\"year_norm\"] = (cars_test[\"year\"] - cars_test[\"year\"].min()) / (cars_test[\"year\"].max() - cars_test[\"year\"].min())\n",
+            "/tmp/ipython-input-1865604891.py:4: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  cars_test[\"mileage_norm\"] = (cars_test[\"mileage\"] - cars_test[\"mileage\"].min()) / (cars_test[\"mileage\"].max() - cars_test[\"mileage\"].min())\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Question 2.3"
+        "# Question 2.3\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "train_set, test_set = train_test_split(cars_test, test_size=0.2, random_state=42)\n",
+        "\n",
+        "print(\"Training set shape:\", train_set.shape)\n",
+        "print(\"Test set shape:\", test_set.shape)"
       ],
       "metadata": {
-        "id": "5zDHOCzRt1oW"
+        "id": "5zDHOCzRt1oW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "edecac40-7ed9-41a1-9f7c-96fa12d9fcaa"
       },
       "id": "5zDHOCzRt1oW",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training set shape: (1999, 5)\n",
+            "Test set shape: (500, 5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
