--- a/assignment_knn.ipynb
+++ b/assignment_knn.ipynb
@@ -53,7 +53,7 @@
         "# a model's performance?\n",
         "\n",
         "# A confusion table is a way to test the fit of a predictive model on the actual\n",
-        "# data set for categorical data sets. It's a cross-tabulation of preducted values\n",
+        "# data set for categorical data sets. It's a cross-tabulation of predicted values\n",
         "# with actual values and it helps us understand how well a predictive model \"fits\"\n",
         "# the actual data we give it. It looks for patterns in the predicted result and\n",
         "# actual results, allowing us to record and analyze trends. \"Accuracy\" is how we\n",
@@ -72,7 +72,7 @@
         "# Question 1.3 What does the SSE quantify about a particular model?\n",
         "\n",
         "# The SSE (sum of squared errors) quantifies a model's accuracy. In other words,\n",
-        "# it quantifies how closely a model's predicted values fall from the true values\n",
+        "# it quantifies how far a model's predicted values fall from the true values\n",
         "# it's being used to predict."
       ],
       "metadata": {
@@ -88,12 +88,12 @@
         "# Question 1.4 What are overfitting and underfitting?\n",
         "\n",
         "# Essentially, overfitting and underfitting are ways to look at a models sensitivity\n",
-        "# to noise and generalization -- whether they're overly exacting or overly simplistic.\n",
+        "# and complexity -- whether they're overly exacting or overly simplistic.\n",
         "# \"Overfitting\" is when a model examines a test data set and adapts to it's data\n",
-        "# points and characteristics to well, meaning that it has low error with the training\n",
-        "# data set but high error with a real data set. \"Underfitting\" is when your model is too\n",
+        "# points and characteristics too well, meaning that it has greater error with a real data set\n",
+        "# versus a training data set. \"Underfitting\" is when your model is too\n",
         "# simple and general and pays too little attention to the characteristic and traits of the\n",
-        "# training data (meaning it has high error for the training AND real data sets it\n",
+        "# training data (meaning it has higher error for the training AND real data sets it\n",
         "# processes). If K is very small, it will lead to overfitting. It is very large, underfitting."
       ],
       "metadata": {
@@ -111,14 +111,14 @@
         "\n",
         "# This method improves model performance because it enables us to see how the model\n",
         "# adapts to the \"test set\" (a set the model hasn't seen) to ensure that overfitting\n",
-        "# or underfitting hasn't occured. By choosing k by evaluating accuracy/SSE on the test set,\n",
-        "# we can make sure that the K doesn't let to overfitting by being overly reliant on the\n",
+        "# or underfitting hasn't occured. When choosing k by evaluating accuracy/SSE on the test set,\n",
+        "# we can make sure that the K doesn't lead to overfitting by being overly reliant on the\n",
         "# training data. This way, we strike a balance between accuracy and applicability.\n",
         "# The k is somewhere in the middle, meaning it will use the training data to yield a k\n",
         "# that we can then use to extract meaningful and trustworthy predictions when used\n",
-        "# on later test sets. Were we to choose K by accuracy/SSE on the training set,\n",
-        "# we would get a model that overfits and is too sensitive to the noise of the\n",
-        "# training set (since the model's only reference is the training set)."
+        "# later on other test sets. Were we to choose K by accuracy/SSE on the training set,\n",
+        "# we would get a model that overfits and is too sensitive to the training set\n",
+        "# (since the model's only reference is the training set)."
       ],
       "metadata": {
         "id": "E1NCLp-ltgRr"
@@ -137,10 +137,10 @@
         "# Class labels as predictions -\n",
         "# The benefit to reporting class labels as predictions is that it enables us to examine\n",
         "# the relative likelihood of one class label to the others. In other words, we can\n",
-        "# make a singular prediction that X class label is the most likely label to occur.\n",
+        "# make a singular prediction that P class label is the most likely label to occur.\n",
         "# The downside is that this doesn't give us a comprehensive overview each class label's\n",
-        "# relative likelihood. For instance, X may be the MOST likely class, but perhaps Y\n",
-        "# and Z are also both pretty likely to happen, making a class label as prediction\n",
+        "# relative likelihood. For instance, P may be the MOST likely class, but perhaps Q\n",
+        "# and R are also both pretty likely to happen, making a class label as prediction\n",
         "# approach somewhat limiting in understanding the liklihood of all the possible outcomes.\n",
         "\n",
         "\n",
@@ -148,8 +148,8 @@
         "# Similarly, a probibility distribution over class labels approach gives us a broader view\n",
         "# into all the different class labels' relative liklihood. However, this method lacks\n",
         "# the specialized insight into a singular class label's liklihood, as well as being\n",
-        "# overly-sensitive to skewed data. Let's say that there were 10 concentrated entries for X\n",
-        "# and Y was an outlier. This method might give Y unfairly increased representation.\n",
+        "# overly sensitive to skewed data. Let's say that there were 10 concentrated entries for P\n",
+        "# and Q was an outlier. This method might give Q unfairly increased representation.\n",
         "\n"
       ],
       "metadata": {
@@ -215,9 +215,7 @@
         }
       ],
       "source": [
-        "# Question 2.1 Load the ./data/USA_cars_datasets.csv. Keep the following variables\n",
-        "# and drop the rest: price, year, mileage. Are there any NA's to handle? Look at\n",
-        "# the head and dimensions of the data.\n",
+        "# Question 2.1\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -229,7 +227,6 @@
         "cars_test = cars[[\"price\", \"year\", \"mileage\"]]\n",
         "\n",
         "print(\"Missing values per column:\\n\", cars_test.isna().sum())\n",
-        "# Shows no missing values (NA's) for our variables of interest (price, year, mileage)\n",
         "\n",
         "print(cars_test.head(10))\n",
         "\n",
@@ -239,7 +236,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 2.2 Maxmin normalize year and mileage.\n",
+        "# Question 2.2\n",
         "\n",
         "import pandas as pd\n",
         "from sklearn.neighbors import KNeighborsRegressor\n",
@@ -296,7 +293,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Question 2.3 Split the sample into ~80% for training and ~20% for evaluation.\n",
+        "# Question 2.3\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "train_set, test_set = train_test_split(cars_test, test_size=0.2, random_state=42)\n",
@@ -368,7 +365,9 @@
         "for k, mse in results.items():\n",
         "    print(f\"k={k}: MSE={mse:.2f}\")\n",
         "\n",
-        "\n"
+        "\n",
+        "# I notice that as K increases, the data become more concentrated along the\n",
+        "# perfect fit line, meaning that as K increases,\n"
       ],
       "metadata": {
         "id": "Ob9NRev3t3na",
@@ -476,14 +475,14 @@
         "# Question 2.6\n",
         "\n",
         "# We can see that as k increases, the scatter plot data become incresingly concentrated\n",
-        "# and confined between the y values of roughly 7000 and 26000. In other words,\n",
-        "# they gradually move from underfitting the data (being to simplistic and unspecific)\n",
-        "# to overfitting the data (being overly specific and sensitive to noise). What we\n",
-        "# want then is a happy medium where the error is the lowest. We want this because\n",
-        "# we want an algorithm that's been trained on part of a data set and evaluated\n",
-        "# by giving it test data. That way, we can ensure that the algorithm will model\n",
-        "# the test data in a way that doesn't fully mirror the training data but is still\n",
-        "# sensitive to the training data's features."
+        "# and confined between the y values of roughly 7000 and 26000. In other words, as k increases,\n",
+        "# the model gradually moves from underfitting the data (being too simplistic and unspecific)\n",
+        "# to overfitting the data (being overly specific and complex). What we\n",
+        "# want then is a happy medium where the error is the lowest and it doesn't overfit.\n",
+        "# We want this because we want an algorithm that's been trained on part of a data\n",
+        "# set and evaluated by giving it test data from the same set. That way, we can ensure\n",
+        "# that the algorithm will model the test data in a way that doesn't fully mirror\n",
+        "# the training data but is still sensitive to the training data's features."
       ],
       "metadata": {
         "id": "Gi9DGSgSt2Wt"
